--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -15,11 +15,10 @@ group='com.github.readium'
 
 android {
 
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
-
+        targetSdkVersion 30
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -38,17 +37,19 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
     if (findProject(':r2-shared')) {
         implementation project(':r2-shared')
     } else {
         implementation "com.github.readium:r2-shared-kotlin:1.1.6"
     }
-    implementation "androidx.appcompat:appcompat:1.2.0-beta01"
+
+    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
     implementation 'nl.komponents.kovenant:kovenant:3.3.0'
-    implementation 'joda-time:joda-time:2.9.9'
-    implementation 'com.github.kittinunf.fuel:fuel:1.16.0'
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.16.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'joda-time:joda-time:2.10.5'
+    implementation 'com.github.kittinunf.fuel:fuel:2.2.2'
+    implementation 'com.github.kittinunf.fuel:fuel-android:2.2.2'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
