--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -15,11 +15,10 @@ group='com.github.readium'
 
 android {
 
-    compileSdkVersion 29
-
+    compileSdkVersion 30
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -46,6 +45,7 @@ dependencies {
         implementation "com.github.readium:r2-shared-kotlin:1.1.6"
     }
 
+    //noinspection GradleDependency
     implementation "readium:liblcp:1.0.0@aar"
 
     implementation('com.mcxiaoke.koi:core:0.5.5') {
@@ -56,7 +56,7 @@ dependencies {
     }
 
 
-    implementation 'joda-time:joda-time:2.9.9'
+    implementation 'joda-time:joda-time:2.10.5'
     implementation 'org.jetbrains.anko:anko-sqlite:0.10.8'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6'
 
@@ -67,9 +67,9 @@ dependencies {
     implementation 'nl.komponents.kovenant:kovenant-jvm:3.3.0'
     implementation 'nl.komponents.kovenant:kovenant-functional:3.3.0'
 
-    implementation 'org.zeroturnaround:zt-zip:1.13'
+    implementation 'org.zeroturnaround:zt-zip:1.14'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
