--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -35,7 +35,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     if (findProject(':r2-shared')) {
         implementation project(':r2-shared')
@@ -43,13 +42,16 @@ dependencies {
         implementation "com.github.readium:r2-shared-kotlin:2.0.0-alpha.2"
     }
 
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
-    implementation 'nl.komponents.kovenant:kovenant:3.3.0'
-    implementation 'joda-time:joda-time:2.10.5'
-    implementation 'com.github.kittinunf.fuel:fuel:2.2.2'
-    implementation 'com.github.kittinunf.fuel:fuel-android:2.2.2'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.appcompat:appcompat:1.3.0-alpha02"
+    implementation "com.github.kittinunf.fuel:fuel-android:2.2.2"
+    implementation "com.github.kittinunf.fuel:fuel:2.2.2"
+    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation "joda-time:joda-time:2.10.5"
+    implementation "nl.komponents.kovenant:kovenant:3.3.0"
+
+    testImplementation "junit:junit:4.13.1"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
+    androidTestImplementation "androidx.test:runner:1.3.0"
 }
