--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "joda-time:joda-time:2.10.5"
     implementation "org.jetbrains.anko:anko-sqlite:0.10.8"
     implementation "org.zeroturnaround:zt-zip:1.14"
+    implementation 'androidx.browser:browser:1.3.0'
 
     testImplementation "junit:junit:4.13.1"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
