--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -9,7 +9,7 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.readium'
 
@@ -47,9 +47,9 @@ dependencies {
     }
 
 
-    implementation "androidx.constraintlayout:constraintlayout:2.0.3"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.core:core-ktx:1.3.2"
-    implementation "com.google.android.material:material:1.3.0-alpha03"
+    implementation "com.google.android.material:material:1.3.0"
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation("com.mcxiaoke.koi:async:0.5.5") {
         exclude module: 'support-v4'
@@ -62,7 +62,7 @@ dependencies {
     implementation "org.zeroturnaround:zt-zip:1.14"
     implementation 'androidx.browser:browser:1.3.0'
 
-    testImplementation "junit:junit:4.13.1"
+    testImplementation "junit:junit:4.13.2"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
