--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -9,7 +9,7 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.readium'
 
@@ -42,14 +42,14 @@ dependencies {
         implementation "com.github.readium:r2-shared-kotlin:2.0.0-beta.2"
     }
 
-    implementation "androidx.appcompat:appcompat:1.3.0-alpha02"
+    implementation "androidx.appcompat:appcompat:1.3.0-beta1"
     implementation "com.github.kittinunf.fuel:fuel-android:2.2.2"
     implementation "com.github.kittinunf.fuel:fuel:2.2.2"
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "joda-time:joda-time:2.10.5"
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
 
-    testImplementation "junit:junit:4.13.1"
+    testImplementation "junit:junit:4.13.2"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
