--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -9,7 +9,7 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.readium'
 
@@ -39,7 +39,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation "androidx.appcompat:appcompat:1.3.0-alpha02"
+    implementation "androidx.appcompat:appcompat:1.3.0-beta01"
     implementation "com.github.kittinunf.fuel:fuel-android:2.2.2"
     implementation "com.github.kittinunf.fuel:fuel:2.2.2"
     implementation "com.google.code.gson:gson:2.8.6"
@@ -56,15 +56,15 @@ dependencies {
 
     testImplementation "androidx.test.ext:junit-ktx:1.1.2"
     testImplementation "androidx.test:core-ktx:1.3.0"
-    testImplementation "junit:junit:4.13.1"
+    testImplementation "junit:junit:4.13.2"
     testImplementation "net.sf.kxml:kxml2:2.3.0"
-    testImplementation "org.assertj:assertj-core:3.16.1"
+    testImplementation 'org.assertj:assertj-core:3.19.0'
     testImplementation "org.jetbrains.kotlin:kotlin-reflect"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
     testImplementation "org.json:json:20200518"
     testImplementation "org.mockito:mockito-core:3.3.3"
-    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation "xmlpull:xmlpull:1.1.3.1"
 
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
