--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -25,6 +25,10 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    kotlinOptions {
+        freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
+        allWarningsAsErrors = true
+    }
     testOptions {
         unitTests.includeAndroidResources = true
     }
@@ -39,19 +43,19 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation "androidx.appcompat:appcompat:1.3.0-rc01"
+    implementation "androidx.appcompat:appcompat:1.3.0"
     implementation "com.github.kittinunf.fuel:fuel-android:2.2.2"
     implementation "com.github.kittinunf.fuel:fuel:2.2.2"
     implementation "com.jakewharton.timber:timber:4.7.1"
-    implementation "joda-time:joda-time:2.10.5"
+    implementation "joda-time:joda-time:2.10.10"
     implementation "nl.komponents.kovenant:kovenant-android:3.3.0"
     implementation "nl.komponents.kovenant:kovenant-combine:3.3.0"
     implementation "nl.komponents.kovenant:kovenant-core:3.3.0"
     implementation "nl.komponents.kovenant:kovenant-functional:3.3.0"
     implementation "nl.komponents.kovenant:kovenant-jvm:3.3.0"
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
-    implementation "org.jetbrains.kotlin:kotlin-reflect"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     implementation "org.jsoup:jsoup:1.13.1"
 
     testImplementation "androidx.test.ext:junit-ktx:1.1.2"
@@ -59,9 +63,11 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     testImplementation "net.sf.kxml:kxml2:2.3.0"
     testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect"
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
+    // Latest version of org.json is incompatible with the one bundled in Android, breaking the tests.
+    //noinspection GradleDependency
     testImplementation "org.json:json:20200518"
     testImplementation "org.mockito:mockito-core:3.3.3"
     testImplementation 'org.robolectric:robolectric:4.5.1'
