--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -27,6 +27,8 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
+        allWarningsAsErrors = true
     }
     buildTypes {
         release {
@@ -38,7 +40,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
 
     if (findProject(':r2-shared')) {
         implementation project(':r2-shared')
@@ -48,7 +50,7 @@ dependencies {
 
 
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
-    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "androidx.core:core-ktx:1.5.0"
     implementation "com.google.android.material:material:1.3.0"
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation("com.mcxiaoke.koi:async:0.5.5") {
@@ -57,7 +59,7 @@ dependencies {
     implementation("com.mcxiaoke.koi:core:0.5.5") {
         exclude module: 'support-v4'
     }
-    implementation "joda-time:joda-time:2.10.5"
+    implementation "joda-time:joda-time:2.10.10"
     implementation "org.jetbrains.anko:anko-sqlite:0.10.8"
     implementation "org.zeroturnaround:zt-zip:1.14"
     implementation 'androidx.browser:browser:1.3.0'
