--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -1,10 +1,7 @@
 /*
- * Module: r2-shared-kotlin
- * Developers: Aferdita Muriqi, Clément Baumann
- *
- * Copyright (c) 2018. Readium Foundation. All rights reserved.
- * Use of this source code is governed by a BSD-style license which is detailed in the
- * LICENSE file present in the project repository where this source code is maintained.
+ * Copyright 2018 Readium Foundation. All rights reserved.
+ * Use of this source code is governed by the BSD-style license
+ * available in the top-level LICENSE file of the project.
  */
 
 apply plugin: 'com.android.library'
@@ -54,8 +51,8 @@ dependencies {
     implementation "nl.komponents.kovenant:kovenant-functional:3.3.0"
     implementation "nl.komponents.kovenant:kovenant-jvm:3.3.0"
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.20"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-native-mt"
     implementation "org.jsoup:jsoup:1.13.1"
 
     testImplementation "androidx.test.ext:junit-ktx:1.1.2"
@@ -63,7 +60,7 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     testImplementation "net.sf.kxml:kxml2:2.3.0"
     testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.5.20"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
     // Latest version of org.json is incompatible with the one bundled in Android, breaking the tests.
