--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -4,10 +4,13 @@
  * available in the top-level LICENSE file of the project.
  */
 
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
-apply plugin: 'com.github.dcendents.android-maven'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'maven-publish'
+}
+
 group='com.github.readium'
 
 android {
@@ -35,6 +38,16 @@ android {
     }
 }
 
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-native-mt"
@@ -46,9 +59,9 @@ dependencies {
     }
 
 
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
-    implementation "androidx.core:core-ktx:1.5.0"
-    implementation "com.google.android.material:material:1.3.0"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation("com.mcxiaoke.koi:async:0.5.5") {
         exclude module: 'support-v4'
@@ -64,6 +77,6 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
-    androidTestImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
 }
