--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -4,14 +4,16 @@
  * available in the top-level LICENSE file of the project.
  */
 
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
-apply plugin: 'com.github.dcendents.android-maven'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'maven-publish'
+}
+
 group='com.github.readium'
 
 android {
-
     compileSdkVersion 30
     defaultConfig {
         minSdkVersion 21
@@ -33,6 +35,16 @@ android {
     }
 }
 
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
@@ -42,14 +54,14 @@ dependencies {
         implementation "com.github.readium:r2-shared-kotlin:develop-SNAPSHOT"
     }
 
-    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "joda-time:joda-time:2.10.10"
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-native-mt"
 
-    testImplementation "androidx.test.ext:junit-ktx:1.1.2"
-    testImplementation "androidx.test:core-ktx:1.3.0"
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
+    testImplementation 'androidx.test:core-ktx:1.4.0'
     testImplementation "junit:junit:4.13.2"
     testImplementation "net.sf.kxml:kxml2:2.3.0"
     testImplementation 'org.assertj:assertj-core:3.19.0'
@@ -61,6 +73,6 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation "xmlpull:xmlpull:1.1.3.1"
 
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
-    androidTestImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
 }
