--- a/readium/lcp/r2-lcp/build.gradle
+++ b/readium/lcp/r2-lcp/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
     id 'maven-publish'
 }
 
@@ -50,7 +51,7 @@ afterEvaluate {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-native-mt"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
 
     if (findProject(':r2-shared')) {
         implementation project(':r2-shared')
@@ -70,9 +71,13 @@ dependencies {
         exclude module: 'support-v4'
     }
     implementation "joda-time:joda-time:2.10.10"
-    implementation "org.jetbrains.anko:anko-sqlite:0.10.8"
     implementation "org.zeroturnaround:zt-zip:1.14"
     implementation 'androidx.browser:browser:1.3.0'
+
+    final room_version = '2.4.0-alpha04'
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
