--- a/readium/shared/r2-shared/build.gradle
+++ b/readium/shared/r2-shared/build.gradle
@@ -14,10 +14,10 @@ plugins {
 group='com.github.readium'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -63,8 +63,8 @@ dependencies {
     implementation "nl.komponents.kovenant:kovenant-functional:3.3.0"
     implementation "nl.komponents.kovenant:kovenant-jvm:3.3.0"
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.20"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-native-mt"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
     implementation "org.jsoup:jsoup:1.13.1"
 
     testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
@@ -72,9 +72,9 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     testImplementation "net.sf.kxml:kxml2:2.3.0"
     testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.5.20"
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
     // Latest version of org.json is incompatible with the one bundled in Android, breaking the tests.
     //noinspection GradleDependency
     testImplementation "org.json:json:20200518"
