--- a/readium/opds/r2-opds/build.gradle
+++ b/readium/opds/r2-opds/build.gradle
@@ -14,10 +14,10 @@ plugins {
 group='com.github.readium'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -51,23 +51,23 @@ dependencies {
     if (findProject(':r2-shared')) {
         implementation project(':r2-shared')
     } else {
-        implementation "com.github.readium:r2-shared-kotlin:develop-SNAPSHOT"
+        implementation "com.github.readium:r2-shared-kotlin:2.1.0"
     }
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "joda-time:joda-time:2.10.10"
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-native-mt"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
 
     testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
     testImplementation 'androidx.test:core-ktx:1.4.0'
     testImplementation "junit:junit:4.13.2"
     testImplementation "net.sf.kxml:kxml2:2.3.0"
     testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.5.20"
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
     testImplementation "org.json:json:20200518"
     testImplementation "org.mockito:mockito-core:3.3.3"
     testImplementation 'org.robolectric:robolectric:4.5.1'
