--- a/.github/workflows/shared.yml
+++ b/.github/workflows/shared.yml
@@ -1,10 +1,9 @@
-name: Build
+name: Shared
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ develop ]
 
 jobs:
   build:
@@ -14,12 +13,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          lfs: 'true'
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
       - name: Build
-        run: ./gradlew clean build -x test
+        run: ./gradlew clean :readium:shared:build -x test
       - name: Test
-        run: ./gradlew test --continue
+        run: ./gradlew :readium:shared:test --continue
