--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -1,25 +1,24 @@
-name: r2-opds-kotlin
+name: Test App
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ develop ]
 
 jobs:
   build:
-    name: Build and test
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          lfs: 'true'
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
       - name: Build
-        run: ./gradlew clean build -x test
-      - name: Test
-        run: ./gradlew test --continue
+        run: ./gradlew clean :test-app:build
