--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,13 +13,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      # See https://github.com/actions/checkout/issues/165
+      - name: Create LFS file list
+        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+      - name: Restore LFS cache
+        uses: actions/cache@v2
+        id: lfs-cache
         with:
-          lfs: 'true'
+          path: .git/lfs
+          key: lfs-${{ hashFiles('.lfs-assets-id') }}-v1
+      - name: Git LFS Pull
+        run: git lfs pull
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
+
       - name: Build
         run: ./gradlew clean build -x test
       - name: Test
