--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: npm install --prefix "$scripts"
+        run: make install
       - name: Lint JavaScript
         run: yarn --cwd "$scripts" run lint
       - name: Check JavaScript formatting
