--- a/readium/navigator/Makefile
+++ b/readium/navigator/Makefile
@@ -2,14 +2,17 @@ SCRIPTS_PATH := src/main/assets/_scripts
 
 help:
 	@echo "Usage: make <target>\n\n\
+	  install\tDownload NPM dependencies\n\
 	  scripts\tBundle EPUB scripts with Webpack\n\
 	  lint-scripts\tCheck quality of EPUB scripts\n\
 	"
 
+install:
+	yarn --cwd "$(SCRIPTS_PATH)" install
+
 scripts:
 	yarn --cwd "$(SCRIPTS_PATH)" run format
 	yarn --cwd "$(SCRIPTS_PATH)" run bundle
-
 
 lint-scripts:
 	yarn --cwd "$(SCRIPTS_PATH)" run lint
