--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  LATEST_VERSION: 2.1.0
-
 jobs:
   docs:
     runs-on: ubuntu-latest
@@ -30,6 +27,9 @@ jobs:
           java-version: 11
           distribution: 'adopt'
 
+      - name: Get current Readium version
+        run: echo "READIUM_VERSION=`git describe --tag --match [0-9]* --abbrev=0`" >> $GITHUB_ENV
+
       - name: Run Dokka
         run: ./gradlew dokkaGfmMultiModule
 
@@ -37,6 +37,6 @@ jobs:
         run: |
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          mike deploy ${{ env.LATEST_VERSION }}
-          mike set-default ${{ env.LATEST_VERSION }}
-          mike deploy --rebase --push --update-aliases ${{ env.LATEST_VERSION }} latest
+          mike deploy ${{ env.READIUM_VERSION }}
+          mike set-default ${{ env.READIUM_VERSION }}
+          mike deploy --rebase --push --update-aliases ${{ env.READIUM_VERSION }} latest
