--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Check if bundled scripts are up-to-date
         run: |
             make scripts
-            git diff --exit-code --name-only src/main/assets/readium/scripts
+            git diff --exit-code --name-only src/main/assets/readium/scripts/*.js
 
